Lint with error-prone